--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 /Aula2/A2Ex4/dist/
 /Aula2/A2Ex4/build/
 /Aula3/A3Ex1/nbproject/private/
+/Aula3/A3Ex1/build/
+/Aula3/A3Ex1/dist/
+/Aula3/A3Ex2/nbproject/private/
+/Aula3/A3Ex2/build/
+/Aula3/A3Ex2/dist/
