--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /Aula3/A3Ex2/nbproject/private/
 /Aula3/A3Ex2/build/
 /Aula3/A3Ex2/dist/
+/Aula3/A3Ex3/nbproject/private/
+/Aula3/A3Ex3/dist/
+/Aula3/A3Ex3/build/
