--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,16 @@
 /Aula3/A3Ex3/dist/
 /Aula3/A3Ex3/build/
 /Aula3/A3Ex4/nbproject/private/
+/Aula3/A3Ex4/build/
+/Aula3/A3Ex4/dist/
+/Aula3/A3Ex5/nbproject/private/
+/Aula3/A3Ex1Agrecacao/nbproject/private/
+/Aula3/A3Ex1Agrecacao/build/
+/Aula3/A3Ex1Agrecacao/dist/
+/Aula3/A3Ex2Composicao/nbproject/private/
+/Aula3/A3Ex2Composicao/dist/
+/Aula3/A3Ex2Composicao/build/
+/Aula3/A3Ex3Agregacao/nbproject/private/
+/Aula4/A4Ex1/nbproject/private/
+/Aula4/A4Ex1/build/
+/Aula4/A4Ex1/dist/
