Add A4Ex3 and A4Ex4

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@
 /Aula4/A4Ex1/build/
 /Aula4/A4Ex1/dist/
 /Aula4/A4Ex2/nbproject/private/
+/Aula4/A4Ex3/nbproject/private/
+/Aula4/A4Ex3/build/
+/Aula4/A4Ex3/dist/
+/Aula4/A4Ex4/nbproject/private/
