--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@
 /Aula4/A4Ex3/build/
 /Aula4/A4Ex3/dist/
 /Aula4/A4Ex4/nbproject/private/
+/Aula4/A4Ex4/build/
+/Aula4/A4Ex4/dist/
+/Aula4/A4Ex5/nbproject/private/
+/Aula4/A4Ex5/dist/
+/Aula4/A4Ex5/build/
