--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@
 /Aula4/A4Ex5/nbproject/private/
 /Aula4/A4Ex5/dist/
 /Aula4/A4Ex5/build/
+/Aula4/A4Ex6/nbproject/private/
+/Aula4/A4Ex6/build/
+/Aula4/A4Ex6/dist/
