Add A4Ex8 and A4Ex9

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@
 /Aula4/A4Ex7/nbproject/private/
 /Aula4/A4Ex7/build/
 /Aula4/A4Ex7/dist/
+/Aula4/A4Ex8/nbproject/private/
+/Aula4/A4Ex9/nbproject/private/
