--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@
 /Aula5/A5Ex1/nbproject/private/
 /Aula5/A5Ex1/dist/
 /Aula5/A5Ex1/build/
+/Aula5/A5Ex2/nbproject/private/
+/Aula5/A5Ex2/dist/
+/Aula5/A5Ex2/build/
