--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@
 /Aula5/A5Ex2/nbproject/private/
 /Aula5/A5Ex2/dist/
 /Aula5/A5Ex2/build/
+/Aula5/A5Ex3/nbproject/private/
+/Aula5/A5Ex3/build/
+/Aula5/A5Ex3/dist/
+/Aula5/A5Ex4/nbproject/private/
