--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@
 /Aula5/A5Ex4/nbproject/private/
 /Aula5/A5Ex4/build/
 /Aula5/A5Ex4/dist/
+/Aula5/A5Ex5/nbproject/private/
+/Aula5/A5Ex5/build/
+/Aula5/A5Ex5/dist/
