--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,10 @@
 /Aula5/A5Ex5/nbproject/private/
 /Aula5/A5Ex5/build/
 /Aula5/A5Ex5/dist/
+/Aula5/A5Ex6/nbproject/private/
+/Aula5/A5Ex07/build/
+/Aula5/A5Ex07/dist/
+/Aula5/A5Ex07/nbproject/private/
+/Aula5/A5Ex7/build/
+/Aula5/A5Ex7/dist/
+/Aula5/A5Ex7/nbproject/private/
