--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@
 /Aula5/A5Ex7/nbproject/private/
 /Aula5/A5Ex6/build/
 /Aula5/A5Ex6/dist/
+/Aula6/JavaApplication44/nbproject/private/
+/Aula6/Aula6Ex1/nbproject/private/
