--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@
 /Aula5/A5Ex6/dist/
 /Aula6/JavaApplication44/nbproject/private/
 /Aula6/Aula6Ex1/nbproject/private/
+/Aula6/Aula6Ex2/nbproject/private/
