--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@
 /Aula6/JavaApplication44/nbproject/private/
 /Aula6/Aula6Ex1/nbproject/private/
 /Aula6/Aula6Ex2/nbproject/private/
+/Aula6/Aula6Ex2/build/
+/Aula6/Aula6Ex2/dist/
