Finished Aula6Ex4

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@
 /Aula6/Aula6Ex2/nbproject/private/
 /Aula6/Aula6Ex2/build/
 /Aula6/Aula6Ex2/dist/
+/Aula6/Aula6Ex3/nbproject/private/
+/Aula6/Aula6Ex4/nbproject/private/
