--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,6 @@
 /Aula6/Aula6Ex2/dist/
 /Aula6/Aula6Ex3/nbproject/private/
 /Aula6/Aula6Ex4/nbproject/private/
+/Aula6/Aula6Ex5/nbproject/private/
+/Aula6/Aula6Ex5/build/
+/Aula6/Aula6Ex5/dist/
