--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@
 /Aula6/Aula6Ex5/dist/
 /Aula7/A7Ex1/nbproject/private/
 /Aula7/A7Ex2/nbproject/private/
+/Aula9/A9Ex1/nbproject/private/
+/Aula9/A9Ex1/build/
+/Aula9/A9Ex1/dist/
