--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@
 /Aula9/A9Ex1/dist/
 /Aula9/A9Ex2/nbproject/private/
 /Aula10/A10Ex1/nbproject/private/
+/Aula10/A10Ex1/dist/
+/Aula10/A10Ex1/build/
