--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,6 @@
 /Aula10/A10Ex2/nbproject/private/
 /Aula10/A10Ex2/build/
 /Aula10/A10Ex2/dist/
+/Aula10/Calculadora/nbproject/private/
+/Aula10/Calculadora/build/
+/Aula10/Calculadora/dist/
