--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@
 /Aula10/Calculadora/nbproject/private/
 /Aula10/Calculadora/build/
 /Aula10/Calculadora/dist/
+/Aula10/A10Ex4/nbproject/private/
+/Aula10/A10Ex4/build/
+/Aula10/A10Ex4/dist/
